# prisma

./: .gitignore  README.md
backend/: .env.example  .gitignore  main.py  pyproject.toml  storage.py
backend/dto/: association_dto.py  clustering_dto.py  diagrams_dto.py  pca_dto.py  preprocessing_dto.py  report_dto.py  time_series_dto.py  upload_dto.py
backend/evaluation/: eval.ipynb
backend/evaluation/data/: synthetic_transactions.csv
backend/models/: base_model.py
backend/models/agent/: groq.py
backend/models/association/: apriori.py  base_association.py
backend/models/clustering/: __init__.py  base_clustering.py  dbscan.py  hierarchical.py  kmeans.py
backend/models/pca/: base_pca.py  covariance_matrix.py  svd.py
backend/models/time_series/: arima_time_series.py  base_time_series.py  linear_regression_time_series.py
backend/preprocessing/: preprocessing.py
backend/prompts/: association_rule.py  clustering.py  method_type.py  pca.py  report.py  time_series.py
backend/routers/: association.py  clustering.py  pca.py  preprocessing.py  reports.py  time_series.py  uploads.py
backend/services/: association_service.py  clustering_service.py  pca_service.py  time_series_service.py
backend/utils/: prompts.py  read_file.py
frontend/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/docs/: openapi-documentation.json  product-requirements.md
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  providers.tsx
frontend/src/lib/: utils.ts
frontend/src/services/: api.ts
(+45 files in other folders)
